--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -718,6 +718,7 @@
     <Content Include="CSS\style.css" />
     <Content Include="devsqlscripts\02.11.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\02.11.2018_FullScriptOfRestHour_II.sql" />
+    <Content Include="devsqlscripts\02202019_FullScript.sql" />
     <Content Include="devsqlscripts\03.12.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\04.10.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\09.10.2018_FullScriptOfRestHour.sql" />
