commiting -- disable copy timesheet button for admin

--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
 
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-VOTM7HM\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-VOTM7HM\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-VOTM7HM\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC;Database=RestHour12;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
-    <add name="RestHourDBConnectionString" connectionString="Server=DEEP-PC;Database=RestHour;User Id=sa;Password=deep;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DEEP-PC;Database=RestHour;User Id=sa;Password=deep;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DEEP-PC;Database=RestHourEmpty;User Id=sa;Password=deep;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Data Source=.\SQLEXPRESS;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC;Database=RestHour12;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
