--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -742,6 +742,7 @@
     <Content Include="devsqlscripts\02202019_FullScript.sql" />
     <Content Include="devsqlscripts\03.12.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\03.14.2019_stpGetPreviousBlankDates.sql" />
+    <Content Include="devsqlscripts\03.15.2019_stpGetSecondWrokSessionsByCrewandDate.sql" />
     <Content Include="devsqlscripts\04.10.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\09.10.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\10.07.2018_stpGetCrewIDFromWorkSessions.sql" />
