--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -31,6 +31,7 @@
     <add key="EquipmentUploadPath" value="~/Equipment/"/>
     <add key="companylogoUploadPath" value="~/companylogo/"/>
     <add key="CrewUploadPath" value="~/Uploads/"/>
+    <add key="UploadMedicalInventoryPath" value="~/UploadMedicalInventoryUploads/"/>
     <add key="InputDateFormat" value="dd-MMM-yyyy"/>
     <add key="InputDateSeperator" value="-"/>
     <add key="OutputDateFormat" value="MM/dd/yyyy"/>
