--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -745,6 +745,8 @@
     <Content Include="devsqlscripts\03.14.2019_stpGetPreviousBlankDates.sql" />
     <Content Include="devsqlscripts\03.15.2019_stpGetSecondWrokSessionsByCrewandDate.sql" />
     <Content Include="devsqlscripts\04.10.2018_FullScriptOfRestHour.sql" />
+    <Content Include="devsqlscripts\05.06.2019_Script of OPA-90 RegimeData.sql" />
+    <Content Include="devsqlscripts\05.06.2019_stpGetCrewIDFromWorkSessions.sql" />
     <Content Include="devsqlscripts\09.10.2018_FullScriptOfRestHour.sql" />
     <Content Include="devsqlscripts\10.07.2018_stpGetCrewIDFromWorkSessions.sql" />
     <Content Include="devsqlscripts\10.07.2018_stpGetWorkSessionsByValidOn.sql" />
