--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -3003,6 +3003,7 @@
     <Content Include="Views\MailServerDetails\FirstRun.cshtml" />
     <Content Include="Views\UploadMedicalInventory\Index.cshtml" />
     <Content Include="Views\CrewHealth\HumanBody.cshtml" />
+    <Content Include="Views\CrewHealth\test.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
