--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -3017,6 +3017,7 @@
     <Content Include="Views\CrewHealth\HumanBody.cshtml" />
     <Content Include="Views\CrewHealth\test.cshtml" />
     <Content Include="Views\CrewHealth\TestBody.cshtml" />
+    <Content Include="Views\Login\ResetPasswordNew.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
