--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -10,12 +10,13 @@
   </configSections>
   <connectionStrings>
 
-     <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-U0578U8\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-U0578U8\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC;Database=RestHour12;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="ServerDESKTOP-IH9MA06\OFFICE;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Data Source=.\SQLEXPRESS;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC;Database=RestHour12;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-CESPC47\DEEP;Database=RestHourClient;User Id=sa;Password=12345;Trusted_Connection=False;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
