--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -758,6 +758,8 @@
     <Content Include="devsqlscripts\06.24.2019_Fullscript.sql" />
     <Content Include="devsqlscripts\07.06.2019_FullScript.sql" />
     <Content Include="devsqlscripts\10.31.2019_FullScript.sql" />
+    <Content Include="devsqlscripts\12.16.19_AddColumnName.sql" />
+    <Content Include="devsqlscripts\12.16.2019_JoiningMedicalFileData.sql" />
     <Content Include="devsqlscripts\13.09.2018_InitialScript_Data.sql" />
     <Content Include="devsqlscripts\13.09.2018_InitialScript_Schema.sql" />
     <Content Include="devsqlscripts\18.09.2018_InitialScript_SchemaAndData.sql" />
@@ -768,6 +770,8 @@
     <Content Include="devsqlscripts\18.12.2019_stpSaveCIRM.sql" />
     <Content Include="devsqlscripts\18.12.2019_stpSaveMedicine.sql" />
     <Content Include="devsqlscripts\18.12.2019_stpSavetblEquipments.sql" />
+    <Content Include="devsqlscripts\19.12.2019_stpGetCrewDetailsForHealthByIDNew.sql" />
+    <Content Include="devsqlscripts\19.12.2019_stpSaveJoiningMedicalFilePath.sql" />
     <Content Include="devsqlscripts\23.07.2019_Fullscript.sql" />
     <Content Include="devsqlscripts\InitialScript_Data.sql" />
     <Content Include="devsqlscripts\InitialScript_Schema.sql" />
@@ -3036,7 +3040,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Equipment\" />
-    <Folder Include="JoningMedical\" />
+    <Folder Include="JoiningMedical\" />
     <Folder Include="Medicine\" />
     <Folder Include="RDL\" />
     <Folder Include="SQLScripts\02-CreateIndexes\" />
