commit Joining medical report

--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -37,6 +37,7 @@
     <add key="InputDateSeperator" value="-"/>
     <add key="OutputDateFormat" value="MM/dd/yyyy"/>
     <add key="OutputDateSeperator" value ="/"/>
+    <add key="JoiningPdfRelativePath" value="~/JoiningMedical/"/>
   </appSettings>
   <system.web>
     <authentication mode="Forms">
