--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -2847,6 +2847,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Login.js" />
+    <Content Include="Scripts\MailCIRM.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\notify.min.js" />
     <Content Include="Scripts\Options.js" />
@@ -3037,6 +3038,7 @@
     <Content Include="Views\Login\ResetPasswordNew.cshtml" />
     <Content Include="Views\Login\ResetPasswordOfID.cshtml" />
     <Content Include="Views\CrewHealth\UploadJoiningMedical.cshtml" />
+    <Content Include="Views\CrewHealth\MailCIRM.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
