--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -3043,6 +3043,8 @@
     <Content Include="Views\CrewHealth\UploadJoiningMedical.cshtml" />
     <Content Include="Views\CrewHealth\MailCIRM.cshtml" />
     <Content Include="Views\CrewHealth\DailyTemperatureReading.cshtml" />
+    <Content Include="Views\CrewHealth\VesselDetails.cshtml" />
+    <Content Include="Views\CrewHealth\PatientDetails.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
