--- a/TM.Base/TM.Base.csproj
+++ b/TM.Base/TM.Base.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Entities\TimeAdjustmentPOCO.cs" />
     <Compile Include="Entities\UserGroupsPOCO.cs" />
     <Compile Include="Entities\UsersPOCO.cs" />
+    <Compile Include="Entities\VesselDetailsPOCO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
