--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\Vessel.cs" />
+    <Compile Include="Models\VesselDetails.cs" />
     <Compile Include="Models\VesselViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -2868,6 +2869,7 @@
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\UploadMedicalInventory.js" />
     <Content Include="Scripts\Vessel.js" />
+    <Content Include="Scripts\VesselDetails.js" />
     <Content Include="Scripts\vfs_fonts.js" />
     <Content Include="Scripts\_references.js" />
     <None Include="SQLScripts\01-CreateTable\CreateTable_RestHour.sql" />
