--- a/TM.RestHour/packages.config
+++ b/TM.RestHour/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="datatables.net" version="1.10.15" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="EPPlus" version="5.2.0" targetFramework="net45" />
   <package id="ExcelDataReader" version="3.4.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.4.0" targetFramework="net45" />
   <package id="Gijgo" version="1.6.1" targetFramework="net45" />
