--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -3061,7 +3061,7 @@
     <Content Include="Views\CrewHealth\DailyTemperatureReading.cshtml" />
     <Content Include="Views\CrewHealth\VesselDetails.cshtml" />
     <Content Include="Views\CrewHealth\PatientDetails.cshtml" />
-    <Content Include="Views\CrewHealth\GetCrewTemperaturePageWiseByCrewID.cshtml" />
+    <Content Include="Views\CrewHealth\ReportDailyTemperature.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
