--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -16,8 +16,8 @@
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Data Source=.\SQLEXPRESS;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-IH9MA06\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-CESPC47\DEEP;Database=RestHourClient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-CESPC47\DEEP;Database=RestHourClient;User Id=sa;Password=12345;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
 
   </connectionStrings>
   <appSettings>
@@ -33,7 +33,14 @@
     <add key="EquipmentUploadPath" value="~/Equipment/" />
     <add key="companylogoUploadPath" value="~/companylogo/" />
     <add key="CrewUploadPath" value="~/Uploads/" />
+    
     <add key="JoiningMedicalUploadPath" value="~/JoiningMedical/" />
+     <add key="MedicineAvailableOnBoardUploadPath" value="~/MedicineAvailableOnBoard/" />
+     <add key="MedicalEquipmentOnBoardUploadPath" value="~/MedicalEquipmentOnBoard/" />
+     <add key="MedicalHistoryUploadUploadPath" value="~/MedicalHistoryUpload/" />
+     <add key="WorkAndRestHourLatestRecordUploadPath" value="~/WorkAndRestHourLatestRecord/" />
+     <add key="PreExistingMedicationPrescriptionUploadPath" value="~/PreExistingMedicationPrescription/" />
+    
     <add key="UploadMedicalInventoryPath" value="~/UploadMedicalInventoryUploads/" />
     <add key="InputDateFormat" value="dd-MMM-yyyy" />
     <add key="InputDateSeperator" value="-" />
