--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -40,6 +40,7 @@
      <add key="MedicalHistoryUploadUploadPath" value="~/MedicalHistoryUpload/" />
      <add key="WorkAndRestHourLatestRecordUploadPath" value="~/WorkAndRestHourLatestRecord/" />
      <add key="PreExistingMedicationPrescriptionUploadPath" value="~/PreExistingMedicationPrescription/" />
+    <add key="UploadPisturesUploadPath" value="~/UploadPistures/" />
     
     <add key="UploadMedicalInventoryPath" value="~/UploadMedicalInventoryUploads/" />
     <add key="InputDateFormat" value="dd-MMM-yyyy" />
