--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -29,25 +29,25 @@
     <add key="Admin" value="Admin" />
     <add key="User" value="User" />
     <add key="AppVer" value="1.0.0" />
-    <add key="MedicineUploadPath" value="~/Medicine/" />
-    <add key="EquipmentUploadPath" value="~/Equipment/" />
-    <add key="companylogoUploadPath" value="~/companylogo/" />
-    <add key="CrewUploadPath" value="~/Uploads/" />
+    <add key="MedicineUploadPath" value="../Medicine/" />
+    <add key="EquipmentUploadPath" value="../Equipment/" />
+    <add key="companylogoUploadPath" value="../companylogo/" />
+    <add key="CrewUploadPath" value="../Uploads/" />
     
-    <add key="JoiningMedicalUploadPath" value="~/JoiningMedical/" />
-     <add key="MedicineAvailableOnBoardUploadPath" value="~/MedicineAvailableOnBoard/" />
-     <add key="MedicalEquipmentOnBoardUploadPath" value="~/MedicalEquipmentOnBoard/" />
-     <add key="MedicalHistoryUploadUploadPath" value="~/MedicalHistoryUpload/" />
-     <add key="WorkAndRestHourLatestRecordUploadPath" value="~/WorkAndRestHourLatestRecord/" />
-     <add key="PreExistingMedicationPrescriptionUploadPath" value="~/PreExistingMedicationPrescription/" />
-    <add key="UploadPisturesUploadPath" value="~/UploadPistures/" />
+    <add key="JoiningMedicalUploadPath" value="../JoiningMedical/" />
+     <add key="MedicineAvailableOnBoardUploadPath" value="../MedicineAvailableOnBoard/" />
+     <add key="MedicalEquipmentOnBoardUploadPath" value="../MedicalEquipmentOnBoard/" />
+     <add key="MedicalHistoryUploadUploadPath" value="../MedicalHistoryUpload/" />
+     <add key="WorkAndRestHourLatestRecordUploadPath" value="../WorkAndRestHourLatestRecord/" />
+     <add key="PreExistingMedicationPrescriptionUploadPath" value="../PreExistingMedicationPrescription/" />
+    <add key="UploadPisturesUploadPath" value="../UploadPistures/" />
     
-    <add key="UploadMedicalInventoryPath" value="~/UploadMedicalInventoryUploads/" />
+    <add key="UploadMedicalInventoryPath" value="../UploadMedicalInventoryUploads/" />
     <add key="InputDateFormat" value="dd-MMM-yyyy" />
     <add key="InputDateSeperator" value="-" />
     <add key="OutputDateFormat" value="MM/dd/yyyy" />
     <add key="OutputDateSeperator" value="/" />
-    <add key="JoiningPdfRelativePath" value="~/JoiningMedical/" />
+    <add key="JoiningPdfRelativePath" value="../JoiningMedical/" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
