--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -16,8 +16,14 @@
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Data Source=.\SQLEXPRESS;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-IH9MA06\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-CESPC47\DEEP;Database=RestHourClient;User Id=sa;Password=12345;Trusted_Connection=False;" />
+    <!-- deep -->
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=RestHourClient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
+
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
+
+
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />
 
   </connectionStrings>
   <appSettings>
