--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -795,6 +795,7 @@
     <Content Include="devsqlscripts\stpSaveConfigData_19072019.sql" />
     <Content Include="devsqlscripts\stpUpdateByResetPassword_09.12.2019.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04122020.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_11122020.sql" />
     <Content Include="EquipmentNew\dist\dual-listbox.css" />
     <Content Include="EquipmentNew\dist\dual-listbox.js" />
     <Content Include="ERRORBOX\CSS\ErrorBox.css" />
@@ -2965,6 +2966,7 @@
     <Content Include="SQLScripts\stpSaveCrewTemperature.sql" />
     <Content Include="SQLScripts\24.06.2020 RestHourClient Script.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_04122020.sql" />
+    <Content Include="SQLScripts\Worth_SQL_Script_Initial_11122020.sql" />
     <Content Include="src\jquery.image-marker.css" />
     <Content Include="src\jquery.image-marker.js" />
     <Content Include="Web.config">
