--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -23,8 +23,8 @@
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
 
 
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_new;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_amit;User Id=sa;Password=12345;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />-->
 
   </connectionStrings>
   <appSettings>
@@ -37,9 +37,9 @@
     <add key="User" value="User" />
     <add key="AppVer" value="1.0.0" />
     <add key="MedicineUploadPath" value="../Medicine/" />
-    <add key="EquipmentUploadPath" value="../Equipment/" />
+    <add key="EquipmentUploadPath" value="~/Equipment/" />
     <add key="companylogoUploadPath" value="../companylogo/" />
-    <add key="CrewUploadPath" value="../Uploads/" />
+    <add key="CrewUploadPath" value="~/Uploads/" />
     
     <add key="JoiningMedicalUploadPath" value="../JoiningMedical/" />
      <add key="MedicineAvailableOnBoardUploadPath" value="../MedicineAvailableOnBoard/" />
